syntax = "proto3";

option csharp_namespace = "PaymentService.Protos";

package payment;

service PaymentService {
	rpc DeductUserBalance (DeductBalanceRequest) returns (DeductBalanceResponse);
}

message DeductBalanceRequest {
	int32 userId = 1;
	int32 totalPrice = 2;
}

message DeductBalanceResponse {
	bool success = 1;
	string message = 2;
}